A......... [ZBX-5116] prevented escaping forward slashes while encoding API response to JSON text (Cemeris)
.......PS. [ZBX-11036] fixed server not to synchronize IPMI configuration for new hosts without IPMI (vso)

--------------------------------------------------------------------------------
Changes for 3.2.7rc1

New features:

Bug fixes:
...G...... [ZBX-12187] fixed memory leak when using UserParameter with suppressed characters passed in arguments (viktors)
........S. [ZBX-12328] fixed collecting value of VMware host memory balloon size (viktors)
..F....... [ZBX-12305] fixed incorrectly escaped IT Service parent name (Ivo)
..F....... [ZBX-11812] fixed sorting of host interfaces (miks)
..F....... [ZBX-11277] fixed update in mass update form when inventory mode is not set explicitly (gcalenko)
..F....... [ZBX-12182] fixed missed page number in problems export (miks)
..F....... [ZBX-11309] fixed unchecked checkboxes after deleting script, mediatype or proxy (miks)
..F....... [ZBX-10999] fixed user's access level to display popup content (miks)
..F....... [ZBX-9213] removed link from uneditable template and host names in all configuration sections (miks)
..F....... [ZBX-6533] improved LDAP authentication module status check for authentication form (gcalenko)
..F....... [ZBX-12019] fixed incorrectly displayed calendar date in maintenance edit form (miks)
..F....... [ZBX-11304] fixed trigger wizard expressions sorting as well as wizard crash due incorrect expression removal (miks)
..F....... [ZBX-11585] fixed nested host group filter in top 100 triggers, item configuration list and dashboard widgets (miks)
A......... [ZBX-12023,ZBX-12133,ZBX-12225] fixed permissions and performance issues with event.get and problem.get methods (Sasha)
.......PS. [ZBX-12046] fixed handling of database failure during ID selection (vso)
..F....... [ZBX-11683] fixed problem with lost IDs of unlinkable templates (miks)